Fri Jul  7 16:24:53 2000  Owen Taylor  <otaylor@redhat.com>

	* configure.in: Release 0.4.0

	* memprof.spec.in: Some cleanups

Fri Jul  7 16:18:31 2000  Owen Taylor  <otaylor@redhat.com>

	* process.c (input_func): Fix a couple of bugs with
	process exit.

	* memintercept.c (_exit): Increment seqno, and close
	outfds[i] - to deal with case of threading.

	* server.c (mp_server_get_type): Reindent.

	* memintercept.c: Make outbuf non-static to avoid 
	keeping last block around for leak detection to find.

Thu Jul  6 10:52:42 2000  Owen Taylor  <otaylor@redhat.com>

	* leakdetect.c (find_block): Handle case where no
	blocks at all exist. (Problem pointed out by
	Christof Petig.)

2000-06-27  Yuri Syrota  <rasta@renome.rovno.ua>

	* configure.in: Add "uk" to ALL_LINGUAS.

Mon Jun  5 10:46:32 2000  Owen Taylor  <otaylor@redhat.com>

	* configure.in: Add de to ALL_LINGUAS.

Sun May 28 15:22:51 2000  Fatih Demir	<kabalak@gmx.net>
	
	* configure.in: Added tr to ALL_LINGUAS.

Fri May 26 12:55:35 2000  Owen Taylor  <otaylor@redhat.com>

	* bfdutils.c (find_line): For a sufficiently screwed up
	object file, bfd_find_nearest_line can return TRUE but
	leave name NULL. Account for this.

	* bfdutils.c: Reindent.

	* process.c (process_exec_reset): Fix problem where
	signal was being emitted on finalize.

Wed May 24 23:30:02 2000  Owen Taylor  <otaylor@redhat.com>

	* process.c (mp_process_finalize): Add a finalize
	function.

Wed May 24 23:18:12 2000  Owen Taylor  <otaylor@redhat.com>

	* process.c (mp_process_init): 
	* server.c (mp_server_init):

	Ref and sink objects to make them strictly reference
	counted.

Wed May 24 05:26:18 2000  Owen Taylor  <otaylor@redhat.com>

        * tree.c main.c: Always confirm when killing or
	detaching from a process.
	
	* main.c (run_file): When running a new process, and we
	have an existing process, create a new window for the
	new process.

	* main.c: Add a SIGCHLD handler so we don't have to